Update execution count and add cvar output in Part 2-1 notebook

--- a/Part 2-1.ipynb
+++ b/Part 2-1.ipynb
@@ -4124,7 +4124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -4134,7 +4134,8 @@
       "cvar_investment <xarray.DataArray ()>\n",
       "array(-5470.22829261)\n",
       "Coordinates:\n",
-      "    chain    int32 0\n"
+      "    chain    int32 0\n",
+      "cvar -6470.228292614583\n"
      ]
     }
    ],
